# tokamak-rl-control-suite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT_v5.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT_v6.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT_v8.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_V4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V4_EXECUTION_SUMMARY.txt  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  FINAL_RESEARCH_PUBLICATION_PACKAGE_v7.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  PROJECT_SUMMARY.md  README.md  RESEARCH_PUBLICATION_PACKAGE_v4.md  RESEARCH_PUBLICATION_PACKAGE_v7.md  SECURITY.md  academic_documentation_package_v7_20250821_220330.json  academic_methodology_documentation_v7.py  academic_methodology_v7_20250821_220330.md  autonomous_gen1_enhanced_results.json  autonomous_gen1_simple_results.json  autonomous_gen2_robust_results.json  (+109 more)
.devcontainer/: devcontainer.json
.github/: project-metrics.json
.terragon/: autonomous-agent.py  config.yaml  value-metrics.json
deployment/ansible/: deploy.yml  inventory
deployment/docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
deployment/kubernetes/: deployment-development.yaml  deployment-production.yaml  deployment-staging.yaml  ingress.yaml
deployment/monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
deployment/scripts/: backup.sh  deploy.sh  monitor.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
deployment_v6/: deployment_summary.json
deployment_v6/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment_v6/docs/: README.md
deployment_v6/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
deployment_v6/monitoring/: grafana-dashboard.yaml  prometheus-config.yaml
deployment_v6/scripts/: build.sh  deploy.sh  health-check.sh
docs/: ROADMAP.md  SETUP_REQUIRED.md  deployment.md  testing.md
docs/adr/: README.md  adr-0001-gymnasium-environment-interface.md  adr-0002-safety-first-architecture.md  adr-template.md
docs/guides/: README.md
docs/monitoring/: README.md  alerting.md  health-checks.md  logging.md  metrics.md  observability-best-practices.md
docs/runbooks/: README.md
docs/workflows/: README.md  ci-cd-setup.md  comprehensive-ci-cd.md  workflow-setup-guide.md
scripts/: build.sh
scripts/automation/: README.md  dependency_updater.py  repo_maintenance.py
scripts/metrics/: collect_metrics.py
src/tokamak_rl/: __init__.py  advanced_physics_research.py  advanced_research.py  advanced_safety.py  agents.py  analytics.py  business.py  cli.py  compliance.py  comprehensive_safety_system.py  cross_platform.py  dashboard.py  i18n.py  (+17 more)
tests/: __init__.py  conftest.py  test_advanced_physics_research.py  test_agents.py  test_analytics.py  test_autonomous_generation1.py  test_basic_functionality.py  test_business.py  test_cli.py  test_dashboard.py  test_environment.py  test_global_first.py  test_global_first_basic.py  test_global_first_simple.py  test_integration.py  test_manual_validation.py  test_performance_benchmark.py  test_physics.py  test_quantum_plasma_control.py  test_safety.py  test_security_validation.py
tokamak_env/: pyvenv.cfg
(+21 files in other folders)
